@@ -1,5 +1,5 @@
 /*
- * "$Id: ppd.c,v 1.51.2.60 2003/08/20 15:54:39 mike Exp $"
+ * "$Id: ppd.c,v 1.51.2.61 2003/11/17 02:29:53 mike Exp $"
  *
  *   PPD file routines for the Common UNIX Printing System (CUPS).
  *
@@ -116,7 +116,7 @@ static ppd_size_t	*ppd_add_size(ppd_file_t *ppd, const char *name);
 static int		ppd_compare_groups(ppd_group_t *g0, ppd_group_t *g1);
 static int		ppd_compare_options(ppd_option_t *o0, ppd_option_t *o1);
 #endif /* !__APPLE__ */
-static void		ppd_decode(char *string);
+static int		ppd_decode(char *string);
 #ifndef __APPLE__
 static void		ppd_fix(char *string);
 #else
@@ -2172,7 +2172,7 @@ ppd_compare_options(ppd_option_t *o0,	/* I - First option */
  * 'ppd_decode()' - Decode a string value...
  */
 
-static void
+static int				/* O - Length of decoded string */
 ppd_decode(char *string)		/* I - String to decode */
 {
   char	*inptr,				/* Input pointer */
@@ -2217,6 +2217,8 @@ ppd_decode(char *string)		/* I - String to decode */
       *outptr++ = *inptr++;
 
   *outptr = '\0';
+
+  return (outptr - string);
 }
 
 
@@ -2564,7 +2566,8 @@ ppd_read(FILE *fp,			/* I - File to read from */
 		colon,			/* Colon seen? */
 		endquote,		/* Waiting for an end quote */
 		mask,			/* Mask to be returned */
-		startline;		/* Start line */
+		startline,		/* Start line */
+		textlen;		/* Length of text */
   char		*keyptr,		/* Keyword pointer */
 		*optptr,		/* Option pointer */
 		*textptr,		/* Text pointer */
@@ -2951,8 +2954,14 @@ ppd_read(FILE *fp,			/* I - File to read from */
         }
 
 	*textptr = '\0';
-	ppd_decode(text);
+	textlen  = ppd_decode(text);
 
+	if (textlen > PPD_MAX_TEXT && ppd_conform == PPD_CONFORM_STRICT)
+	{
+	  ppd_status = PPD_ILLEGAL_TRANSLATION;
+	  return (0);
+	}
+	    
 	mask |= PPD_TEXT;
       }
 
@@ -3013,5 +3022,5 @@ ppd_read(FILE *fp,			/* I - File to read from */
 
 
 /*
- * End of "$Id: ppd.c,v 1.51.2.60 2003/08/20 15:54:39 mike Exp $".
+ * End of "$Id: ppd.c,v 1.51.2.61 2003/11/17 02:29:53 mike Exp $".
  */
